--- a/app/views/kpi_entries/index.html.erb
+++ b/app/views/kpi_entries/index.html.erb
@@ -25,489 +25,8 @@
   </li>
 </ul>
 
-<div class="entry-right-content" style="overflow: visible">
-  <!--<div class="entry-block">
-    <i class="icon-chevron-left" id="entry-minus"></i>
-    <input type="text" readonly=true id="entry-date-picker"/>
-    <i class="icon-chevron-right" id="entry-plus"></i>
-    <span id="entry-date-extra"></span>
-  </div>-->
-  <ul class="entry-sort-list" id="entry-sort-list">
-  </ul>
-
-  <div class="panel">
-    <div class="panel-heading">
-      <h3>KPI</h3>
-
-      <div class="Search">
-        <div class="entry-block">
-          <!--<i class="icon-chevron-left" id="entry-minus"></i>-->
-          <input type="text" readonly=true id="entry-date-picker"/>
-          <span id="entry-date-extra"></span>
-          <!--<i class="icon-chevron-right" id="entry-plus"></i>-->
-        </div>
-
-        <div class="entry-block">
-          <input type="text" readonly=true id="entry-date-picker-to"/>
-          <span id="entry-date-extra-to"></span>
-        </div>
-
-        <!--here is the search  en  and  cn-->
-        <input type="button" value="查询" class="btn btn-primary">
-      </div>
-    </div>
-
-    <div id="tabs">
-      <ul>
-        <li><a href="#tabs-1">KPI1</a></li>
-        <li><a href="#tabs-2">KPI2</a></li>
-        <li><a href="#tabs-3">KPI3</a></li>
-      </ul>
-      <hr/>
-
-      <div id="tabs-1">
-        <table class="table table-striped table-hover">
-          <thead>
-          <tr>
-            <th>project_nr</th>
-            <th>location</th>
-            <th>working_type</th>
-            <th>task_id</th>
-            <th>exception</th>
-            <th>...</th>
-          </tr>
-          </thead>
-
-          <tbody>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-
-
-      <div id="tabs-2">
-        <table class="table table-hover table-striped">
-          <thead>
-          <tr>
-            <th>project_nr</th>
-            <th>location</th>
-            <th>working_type</th>
-            <th>task_id</th>
-            <th>exception</th>
-            <th>others</th>
-            <th>here</th>
-            <th>...</th>
-            <th>...</th>
-            <th>...</th>
-            <th>...</th>
-          </tr>
-          </thead>
-
-          <tbody>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>Others</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div id="tabs-3">
-        <table class="table table-hover table-striped">
-          <thead>
-          <tr>
-            <th>project_nr</th>
-            <th>location</th>
-            <th>working_type</th>
-            <th>task_id</th>
-            <th>exception</th>
-            <th>others</th>
-            <th>here</th>
-            <th>Love</th>
-            <th>Script</th>
-            <th>IsScrap</th>
-            <th>...</th>
-          </tr>
-          </thead>
-
-          <tbody>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>YES</td>
-            <td>Right Boy</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>Here is the remark.</td>
-          </tr>
-
-          <!--here is the copy-->
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>YES</td>
-            <td>Right Boy</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>Here is the remark.</td>
-          </tr>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>YES</td>
-            <td>Right Boy</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>Here is the remark.</td>
-          </tr>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>YES</td>
-            <td>Right Boy</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>Here is the remark.</td>
-          </tr>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>YES</td>
-            <td>Right Boy</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>Here is the remark.</td>
-          </tr>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>YES</td>
-            <td>Right Boy</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>Here is the remark.</td>
-          </tr>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>YES</td>
-            <td>Right Boy</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>Here is the remark.</td>
-          </tr>
-          <tr>
-            <td>11071125</td>
-            <td>Shanghai</td>
-            <td>working time</td>
-            <td>IS</td>
-            <td>YES</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071126</td>
-            <td>Shanghai</td>
-            <td>Release time</td>
-            <td>SNS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>YES</td>
-            <td>Right Boy</td>
-            <td>YES</td>
-            <td>...</td>
-          </tr>
-          <tr>
-            <td>11071127</td>
-            <td>Shanghai</td>
-            <td>Travel time</td>
-            <td>OS</td>
-            <td>NO</td>
-            <td>...</td>
-            <td>Love</td>
-            <td>No</td>
-            <td>Right Boy</td>
-            <td>NO</td>
-            <td>Here is the remark.</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
+<div class="entry-right-content" style="overflow: hidden">
+  <%= render :partial => "kpi_entries/history" %>
 </div>
 
 <div class="modal-outer" id="upload-kpi">
