--- a/app/views/kpi_entries/index.html.erb
+++ b/app/views/kpi_entries/index.html.erb
@@ -25,7 +25,7 @@
   </li>
 </ul>
 
-<div class="entry-right-content" style="overflow: hidden">
+<div class="entry-right-content" style="overflow: visible">
   <%= render :partial => "kpi_entries/history" %>
 </div>
 
