--- a/app/views/kpi_entries/index.html.erb
+++ b/app/views/kpi_entries/index.html.erb
@@ -136,8 +136,8 @@
             type: 'get',
             data: {
                 id: id,
-                startdate: startdate,
-                enddate: enddate
+                start_date: startdate,
+                end_date: enddate
             },
             dataType: "html",
             success: function (data) {
