--- a/app/views/kpi_entries/index.html.erb
+++ b/app/views/kpi_entries/index.html.erb
@@ -42,7 +42,7 @@
         <span id="entry-date-extra-to"></span>
       </div>
 
-      <input type="button" id="searchkpi" value="查询" class="btn btn-primary" onclick="BtnSearchKpi()">
+      <input type="button" id="searchkpi" value="<%= t 'entry.desc.search' %>" class="btn btn-primary" onclick="BtnSearchKpi()">
     </div>
   </div>
 
