--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,19 +94,19 @@
 //        }, 5000);
 //    })();
 
-    $.ajaxSetup({
-        statusCode: {
-            403: function () {
-                location.href='/403';
-            },
-            404: function () {
-                location.href='/404';
-            },
-            500:function(){
-               location.href='/500';
-            }
-        }
-    });
+//    $.ajaxSetup({
+//        statusCode: {
+//            403: function () {
+//                location.href='/403';
+//            },
+//            404: function () {
+//                location.href='/404';
+//            },
+//            500:function(){
+//               location.href='/500';
+//            }
+//        }
+//    });
 </script>
 <%= yield :javascript_includes %>
 </html>
