--- a/app/views/kpis/_list.html.erb
+++ b/app/views/kpis/_list.html.erb
@@ -41,7 +41,7 @@
          <a class="btn btn-success edit-kpi-attribute" work_at="<%= kpi.id%>"><%= t 'manage.kpi.dimensions-edit'%></a>
          <p kpi_id="<%= kpi.id%>">
            <% kpi.kpi_property_items.each do |item| %>
-               <span id="<%= item.id %>"><%= item.kpi_property.name %></span>
+               <span id="<%= item.id %>"><%= item.kpi_property.blank? ? '' : item.kpi_property.name %></span>
            <%end%>
          </p>
 
