--- a/app/views/task/items/_form.html.erb
+++ b/app/views/task/items/_form.html.erb
@@ -28,8 +28,8 @@
     <%= f.number_field :generate_type %>
   </div>
   <div class="field">
-    <%= f.label :assignor_id %><br />
-    <%= f.number_field :assignor_id %>
+    <%= f.label :assigner_id %><br />
+    <%= f.number_field :assigner_id %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br />
