--- a/app/views/task/items/index.html.erb
+++ b/app/views/task/items/index.html.erb
@@ -24,7 +24,7 @@
     <td><%= task_item.title %></td>
     <td><%= task_item.content %></td>
     <td><%= task_item.generate_type %></td>
-    <td><%= task_item.assignor_id %></td>
+    <td><%= task_item.assigner_id %></td>
     <td><%= task_item.user_id %></td>
     <td><%= task_item.to_due_at %></td>
     <td><%= task_item.dued_at %></td>
